--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,32 @@
 
 	<groupId>com.github.reactiveclown</groupId>
 	<artifactId>openai-webflux-client-spring-boot-starter</artifactId>
-	<version>0.0.1</version>
-	<name>openai-webflux-client</name>
-	<description>OpenAI Webflux API client spring boot starter</description>
+	<version>0.9.0</version>
+	<name>${project.groupId}:${project.artifactId}</name>
+	<description>OpenAI Webflux API client with spring boot starter</description>
+	<url>https://github.com/reactiveclown/openai-webflux-java</url>
+
+	<licenses>
+		<license>
+			<name>MIT License</name>
+			<url>http://www.opensource.org/licenses/mit-license.php</url>
+		</license>
+	</licenses>
+
+	<scm>
+		<connection>scm:git:git://github.com/reactiveclown/openai-webflux-java.git</connection>
+		<developerConnection>scm:git:ssh://github.com:reactiveclown/openai-webflux-java.git</developerConnection>
+		<url>https://github.com/reactiveclown/openai-webflux-java</url>
+	</scm>
+
+	<developers>
+		<developer>
+			<name>Maksym Volkov</name>
+			<email>clown.reactive@gmail.com</email>
+			<organization>com.github.reactiveclown</organization>
+			<organizationUrl>https://github.com/reactiveclown</organizationUrl>
+		</developer>
+	</developers>
 
 	<properties>
 		<java.version>17</java.version>
